--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,42 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+
+  @media only screen and (max-width: 75em) {
+    font-size: 56.25%;
+  }
+
+  @media only screen and (max-width: 56.25em) {
+    font-size: 50%;
+  }
+}
+
+body {
+  background-color: #f6f9fc;
+  font-family: "Open Sans", sans-serif;
+  padding: 0 15rem;
+  border-width: inherit;
+}
+
+@media only screen and (max-width: 75em) {
+  body {
+    padding: 0 12rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  body {
+    padding: 0 6rem;
+  }
+}
+
+@media only screen and (max-width: 28.125em) {
+  body {
+    padding: 0 4rem;
+  }
 }
